--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "dev": "dotenvx run -f .env.dev -- bun server.ts"
   },
   "dependencies": {
+    "@sequelize/postgres": "^7.0.0-alpha.45",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.0",
     "@types/pino": "^7.0.5",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "pino": "^9.6.0",
-    "pino-pretty": "^13.0.0"
+    "pino-pretty": "^13.0.0",
+    "sequelize": "^6.37.6"
   }
 }
