--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.0",
     "@types/pino": "^7.0.5",
+    "@types/sequelize": "^4.28.20",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "pino": "^9.6.0",
